	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* added missing pop_alerts() to python bindings
	* fixed typos in configure script, inversing some feature-enable/disable flags
	* added missing flag_update_subscribe to python bindings
	* active_dht_limit, active_tracker_limit and active_lsd_limit now interpret -1 as infinite

0.16.6 release

	* fixed verbose log error for NAT holepunching
	* fix a bunch of typos in python bindings
	* make get_settings available in the python binding regardless of deprecated functions
	* fix typo in python settings binding
	* fix possible dangling pointer use in peer list
	* fix support for storing arbitrary data in the DHT
	* fixed bug in uTP packet circle buffer
	* fix potential crash when using torrent_handle::add_piece
	* added missing add_torrent_alert to python binding

0.16.5 release

	* udp socket refcounter fix
	* added missing async_add_torrent to python bindings
	* raised the limit for bottled http downloads to 2 MiB
	* add support for magnet links and URLs in python example client
	* fixed typo in python bindings' add_torrent_params
	* introduce a way to add built-in plugins from python
	* consistently disconnect the same peer when two peers simultaneously connect
	* fix local endpoint queries for uTP connections
	* small optimization to local peer discovery to ignore our own broadcasts
	* try harder to bind the udp socket (uTP, DHT, UDP-trackers, LSD) to the same port as TCP
	* relax file timestamp requirements for accepting resume data
	* fix performance issue in web seed downloader (coalescing of blocks sometimes wouldn't work)